--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,66 +1,84 @@
 * {
-    font-family: 'Poppins', sans-serif; 
-  }
-  .dashboard-container {
-    display: flex;
+  font-family: 'Poppins', sans-serif; 
+}
+
+.dashboard-container {
+  display: flex;
   background-color: #1E1E1E; 
-  }
-  
-  .sidebar {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 16px;
-    gap: 28px;
-    width: 240px;
-    height: 100vh;
-    background: #454545;
-    border-radius: 16px;
-    color: white;
-    margin-top: 10px;
-    margin-left:10px;
-    margin-bottom:10px;
-    font-family: 'Poppins', sans-serif;
-  }
-  
-  .sidebar h2 {
-    margin: 0;
-    color: white;
-  }
-  
-  
-  .sidebar button {
-    width: 100%;
-    padding: 15px 0;
-    background-color: transparent;
-    border: none;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    border-radius: 8px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    
-  }
-  
-  /* Efecto hover para todos los botones */
-  .sidebar button:hover {
-    background-color: #616161;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Estilos específicos para el botón de Summary */
-  .sidebar .summary-btn {
-    background-color: #2E8B57; /* Color especial para el botón Summary */
-  }
-  
-  .sidebar .summary-btn:hover {
-    background-color: #207546; 
-  }
-  
-  
-  .content {
-    padding: 20px;
-    flex-grow: 1;
-  }
-  
+}
+
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 16px;
+  gap: 28px;
+  width: 240px;
+  height: 100vh;
+  background: #454545;
+  border-radius: 16px;
+  color: white;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
+.sidebar h2 {
+  margin: 0;
+  color: white;
+}
+
+.sidebar button {
+  width: 100%;
+  padding: 15px 0;
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 20px;
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+/* Efecto hover para todos los botones */
+.sidebar button:hover {
+  background-color: #616161;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Estilos específicos para el botón de Summary */
+.sidebar .summary-btn {
+  background-color: #2E8B57; /* Color especial para el botón Summary */
+}
+
+/* Estilo del botón Summary al pasar el mouse */
+.sidebar .summary-btn:hover {
+  background-color: #207546; 
+}
+
+/* Estilos para el contenido del botón */
+.button-content {
+  display: flex;
+  align-items: center; /* Centra verticalmente */
+  justify-content: flex-start; /* Alinea el contenido a la izquierda */
+  width: 100%; /* Asegura que ocupe todo el ancho del botón */
+  padding-left: 25px; /* Separación del borde izquierdo */
+}
+
+/* Estilo de la imagen */
+.icon {
+  width: 35px; /* Ajusta el tamaño según sea necesario */
+  height: auto; /* Mantiene la relación de aspecto */
+  margin-right: 20px; /* Espacio entre la imagen y el texto */
+  background-color: rgb(255, 255, 255); /* Fondo negro para la imagen */
+  border-radius: 12px; /* Bordes redondeados */
+  padding: 3px; /* Añade espacio alrededor de la imagen */
+}
+
+
+
+.content {
+  padding: 20px;
+  flex-grow: 1;
+}
