--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,4 +1,4 @@
-* {
+*{
   font-family: 'Poppins', sans-serif;
 }
 
@@ -104,4 +104,24 @@
 .content {
   padding: 20px;
   flex-grow: 1;
+}
+
+.chart-wrapper {
+  width: 100%;
+  max-width: 800px; 
+  height: 400px; 
+  background-color: #1E1E1E; 
+  padding: 20px; 
+  border-radius: 16px; 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
+  margin-bottom: 20px; 
+  overflow: hidden; 
+}
+.grid-2x2 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr); 
+  grid-template-rows: repeat(2, 1fr); 
+  gap: 20px; 
+  justify-items: center; 
+  align-items: center; 
 }
