--- a/src/Login.css
+++ b/src/Login.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url('./assets/Fondo.jpg');  /* Imagen de fondo */
+  background-image: url('./assets/Fondo.jpg');
   background-size: cover;
   background-position: center;
   position: relative;
@@ -39,13 +39,13 @@
   z-index: 1; /* Evita que el contenido sea afectado por la capa de transparencia */
 }
 
-
 /* Título de login */
 .login-title {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 20px;
   text-align: left;
+  color: black;
 }
 
 /* Grupo de entrada */
@@ -58,35 +58,33 @@
   margin-bottom: 5px;
   font-size: 14px;
   text-align: left;
+  color: #000;
 }
 
 .input-group input {
-  width: 93%;
+  width: 100%; /* Ajusta para que ocupe el 100% del espacio */
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 5px;
 }
 
+/* Botón Sign in */
 button {
-  background-color: #14AE5C; 
+  background-color: #14AE5C; /* Color verde del botón */
   color: white; 
   border: none; 
-  border-radius: 20px; 
+  border-radius: 50px; /* Redondear los bordes */
   padding: 10px 20px; 
   font-size: 16px; 
   cursor: pointer; 
   transition: background-color 0.3s; 
   width: 100%; /* Botón más largo, ocupa el ancho completo del contenedor */
-  display: block; /* Botón en bloque para poder centrarlo */
+  display: block; /* Botón en bloque para centrarlo */
   margin: 20px auto; /* Centra el botón horizontalmente */
 }
 
 button:hover {
-  background-color: #21a1f1; 
-}
-
-.login-btn:hover {
-  background-color: #bbb;
+  background-color: #12a152; /* Un verde más oscuro en hover */
 }
 
 /* Opciones de login */
@@ -94,6 +92,8 @@ button:hover {
   display: flex;
   justify-content: space-between;
   margin-top: 10px;
+  color: #000;
+  font-size: 12px;
 }
 
 .help-link {
@@ -106,6 +106,7 @@ button:hover {
   text-decoration: underline;
 }
 
+/* Logo de login */
 .logo-container {
   text-align: center; /* Centra el logotipo horizontalmente */
   margin-bottom: 20px; /* Añade espacio debajo del logotipo */
