--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -32,12 +32,15 @@ html, body {
   justify-content: flex-start;
   align-items: center;
   padding: 16px;
-  width: 190px;
+  width: 205px;
   background: #454545;
   border-radius: 16px;
   color: white;
   height: 100vh; /* Asegura que el sidebar ocupe toda la altura */
   position: fixed;
+  margin-top: 7px;
+  margin-left: 7px;
+  margin-bottom: 7px;
 }
 
 .sidebar h2 {
